<?xml version="1.0"?>
<package format="2">
  <name>timed_roslaunch</name>
  <version>0.2.0</version>
  <description>
    Script to delay the launch of a roslaunch file
  </description>

  <maintainer email="tiryoh@gmail.com">Daisuke Sato</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/Tiryoh/timed_roslaunch.git</url>
  <url type="bugtrucker">https://github.com/Tiryoh/timed_roslaunch/issues</url>
  <author email="p595201m@mail.kyutech.jp">Masaru Morita</author>
  <author email="o111027y@mail.kyutech.jp">Doi Yusuke</author>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>rospy</test_depend>
  <test_depend>roslaunch</test_depend> <!-- this is for launch test -->
</package>
